made input fields inactive when not editing

--- a/profile_page.html
+++ b/profile_page.html
@@ -164,9 +164,9 @@
                     <div class="form-group">
                          <div class="col-xs-12">
                               <br>
-                              <button type="button" class="btn btn-lg btn-primary"><i class="glyphicon glyphicon-pencil"></i> Edit</button>
-                                <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                                 <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                              <button type="button" class="btn btn-lg btn-primary" id="edit-button"><i class="glyphicon glyphicon-pencil"></i> Edit</button>
+                                <button class="btn btn-lg btn-success" type="submit" id="save-button"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                 <button class="btn btn-lg" type="reset" id="reset-button"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                                  
                           </div>
                     </div>
